# kms-dtf-erp-starter

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEX_COMMANDS.md  DEPLOYMENT.md  LICENSE  README.md  RELEASE_CHECKLIST.md  USER_MANUAL.md  alembic.ini  kms_dtf_erp.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
api/: server.py
app/: main.py  version.py
app/database/: __init__.py  base.py  health.py  initialize.py
docs/: CODEX_MASTER_PROMPT.md  PROJECT_BIBLE.md
docs/architecture/: ARCHITECTURE.md
docs/database/: DATABASE_SCHEMA.md
docs/integrations/: AI_ENGINE.md
docs/ui/: UI_DESIGN_SYSTEM.md
docs/workflows/: GIT_WORKFLOW.md
installer/: KMS_DTF_ERP.iss  version_info.txt
scripts/: __init__.py  build_windows.ps1  generate_icon.py  launch_app.vbs  profile_startup.py  seed_admin.py  setup_windows.ps1
tests/integration/: test_artwork_migration.py  test_authentication_migration.py  test_cloud_storage_migration.py  test_communications_migration.py  test_customer_migration.py  test_gang_sheet_migration.py  test_inventory_migration.py  test_operations_migration.py  test_order_migration.py  test_product_migration.py  test_production_migration.py  test_sales_migration.py  test_shipping_migration.py
tests/unit/: test_ai_engine.py  test_application_shell.py  test_artwork.py  test_artwork_studio.py  test_authentication.py  test_cloud_storage.py  test_communications.py  test_config.py  test_customers.py  test_customers_ui.py  test_dashboard.py  test_dashboard_ui.py  (+14 more)
(+134 files in other folders)
