[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kms-dtf-erp"
version = "0.1.0"
description = "Windows desktop ERP for DTF printing businesses"
requires-python = ">=3.12"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
